# Filebrowser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.toml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
build_deb/filebrowser/DEBIAN/: control
build_deb/filebrowser/usr/share/applications/: filebrowser.desktop
build_deb/filebrowser/usr/share/filebrowser/src/: main.py
build_deb/filebrowser/usr/share/filebrowser/src/search/: cloud_mount.py  indexer.py
build_deb/filebrowser/usr/share/filebrowser/src/ui/: about.py  feedback.py  settings_ui.py  styles.css  tray.py
scripts/: build_appimage.sh  build_deb.sh  build_windows.ps1  install.sh  installer.iss
src/: i18n.py  main.py
src/config/: settings.py
src/locale/en/LC_MESSAGES/: filebrowser.po
src/search/: finder.py  indexer.py
src/ui/: about.py  donate.py  feedback.py  settings_ui.py  styles.css  tray.py  window.py
